# image-process

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  RELEASE.md  Readme.rst  __init__.py  dev-requirements.txt  image_process.py  invoke.yaml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tasks.py  test_image_process.py
.github/: FUNDING.yml
.github/workflows/: main.yml
image_process/: __init__.py
minchin/: __init__.py
minchin/pelican/: __init__.py
minchin/pelican/plugins/: __init__.py  image_process.py
pelican/plugins/image_process/: __init__.py  image_process.py  test_image_process.py
pelican/plugins/image_process/test_data/noexif/: pelican-bird.jpg_original  pelican-bird.png_original
pelican_image_process/: __init__.py
tests/: test_image_process.py
