[tool.poetry]
name = "pelican-image-process"
version = "3.0.4"
description = "Pelican plugin that automates image processing."
authors = ["Pelican Dev Team <authors@getpelican.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "image", "responsive", "optimization"]
repository = "https://github.com/pelican-plugins/image-process"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Bug Tracker" = "https://github.com/pelican-plugins/image-process/issues"
"Changelog" = "https://github.com/pelican-plugins/image-process/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.2", optional = true}
beautifulsoup4 = ">=4.9"
Pillow = ">=9.1"
lxml = ">=4.6"

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = "^5.0"
flake8-black = "^0.3.3"
invoke = "^2.0"
isort = "^5.12.0"
markdown = "^3.2"
pytest = "^6.0"
pytest-cov = "^2.8"
pytest-mock = "^3.3.1"
pytest-sugar = ">=1.0.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Image Process"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
